# vbd

./: .gitignore  .gitmodules  CMakeLists.txt  OGCMakeLists.txt  README.md  build.ps1  rebuild.ps1  requirements.txt  run.ps1
docs/: STRUCTURE.md
resources/scenes/: scenes.json
scripts/: rebuild.ps1  run.ps1
src/: constants.h  include.h  main.cpp
src/include/simulate/: Mesh.cpp  Mesh.h  MeshGPU.cu  MeshGPU.h  Physics.cpp  Physics.h  PhysicsScene.cpp  PhysicsScene.h
src/include/utils/: MatrixStack.cpp  MatrixStack.h  anim.py  graphcolor.py  graphcoloring.py  simplifymesh.py  tetrahedralize.py  utils.cpp  utils.h  visualize.py
